tempfile/derivative/tests/compile-fail/invalid-attribute.stderr
error: invalid attribute: expected literal
 --> $DIR/invalid-attribute.rs:8:22
  |
8 | #[derivative(Clone = not_a_string)]
  |                      ^^^^^^^^^^^^

error: invalid attribute: expected `,`
  --> $DIR/invalid-attribute.rs:12:23
   |
12 | #[derivative(Clone = 1+2)]
   |                       ^

error: expected `"true"` or `"false"` for `new`, got `True`
  --> $DIR/invalid-attribute.rs:16:28
   |
16 | #[derivative(Default(new = "True"))]
   |                            ^^^^^^

error: expected named value
  --> $DIR/invalid-attribute.rs:20:20
   |
20 | #[derivative(Debug(bound))]
   |                    ^^^^^
